Tests/CompilerTests/negative/illegal-sink-global.expected
negative/illegal-sink-global.hylo:8.11-14: error: illegal 'sink' access
  var x = foo
          ~~~
negative/illegal-sink-global.hylo:9.11-16: error: illegal 'sink' access
  var y = S.foo
          ~~~~~
